--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
    
     <div class="one">
       <div class="reflow">
-        <img class="lazy" data-srcset="https://live.staticflickr.com/65535/48421069967_0bd51be071_o.jpg" alt="">
+        <img class="lazy" data-srcset="img/1.jpg" alt="">
       </div>
     </div>
       
     <div class="two">
       <div class="reflow">
-        <img class="lazy" data-srcset="https://live.staticflickr.com/65535/48421069917_14b04b379a_o.jpg" alt="">
+        <img class="lazy" data-srcset="img/2.jpg" alt="">
       </div>
     </div>
   
     <div class="three">
       <div class="reflow r-landscape">
-        <img  class="lazy" data-srcset="https://live.staticflickr.com/65535/48420920906_d99814dec1_o.jpg" alt="">
+        <img  class="lazy" data-srcset="img/3.jpg" alt="">
       </div>
     </div>
       
