--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    
     <div class="one">
       <div class="reflow">
-        <img class="lazy" data-srcset="img/1.jpg" alt="">
+        <img class="lazy" data-srcset="/img/1.jpg" alt="">
       </div>
     </div>
       
