--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
   <nav id="navigation">
     <div class="header-main">
-      <a href=""><img class="utsurundesu" src="http://167.99.106.90/img/kendrajian.svg"></a>
+      <a><img class="utsurundesu" src="http://167.99.106.90/img/kendrajian.svg"></a>
     </div>
     <div class="header-sticky" id="sticky">
     <div class="header-sticky-maxwidth">
